--- a/film-search/src/index.css
+++ b/film-search/src/index.css
@@ -14,6 +14,9 @@
   --purple: #7B6EF6;
   --text:  #A8AEBF;
   --white: #ffffff;
+  --background-card: #20283ECC;
+  --gold: #FFAD49;
+  --black:  #000000A6;
 }
 
 a {
