--- a/film-search/src/Layout/Header/Header.css
+++ b/film-search/src/Layout/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-  padding: 20px 120px;
+  padding: 20px 120px 20px 120px;
   display: flex;
   justify-content: space-between;
   max-width: 1440px;
@@ -15,6 +15,7 @@
   padding: 0;
   width: 499px;
   justify-content: space-between;
+  margin-right: 220px;
 }
 
 .header-nav__item {
