--- a/film-search/src/index.css
+++ b/film-search/src/index.css
@@ -12,6 +12,11 @@
   --white: #EBEEF5;
   --gray:  #8E95A9;
   --purple: #7B6EF6;
+  --text:  #A8AEBF;
+  --white: #ffffff;
+  --background-card: #20283ECC;
+  --gold: #FFAD49;
+  --black:  #000000A6;
 }
 
 a {
@@ -26,7 +31,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   background: #121829;
